fix: flickering

--- a/resources/sass/optioner.scss
+++ b/resources/sass/optioner.scss
@@ -22,6 +22,8 @@ $color_primary: #008dd4;
 		}
 
 		.tab-content {
+			display: none;
+
 			.tab-content-inner {
 				margin-top: 20px;
 				border-top: 1px solid #ccd0d4;
@@ -109,6 +111,13 @@ $color_primary: #008dd4;
 			ul {
 				list-style-type: disc;
 			}
+		}
+	}
+
+	.field-row-heading,
+	.field-row-message {
+		th {
+			display: none;
 		}
 	}
 
